refactor: Java 21 idioms — Thread.ofVirtual feign workers, virtual-thread factories for scheduled/SSH executors, Stream.toList, Tomcat virtual threads, compiler release=21