@@ -19,7 +19,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static jbst.foundation.domain.dto.responses.JbstResponseUserSession2.*;
 import static jbst.foundation.domain.tuples.TuplePresence.present;
@@ -56,7 +55,7 @@ public interface JbstMongoUsersSessionsRepository extends MongoRepository<JbstMo
         return this.findByUsername(username).stream()
                 .map(session -> session.responseUserSession2(requestAccessToken))
                 .sorted(USERS_SESSIONS)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     default JbstResponseSuperadminSessionsTable getSessionsTable(Set<JbstJwtAccessToken> activeAccessTokens, JbstRequestAccessToken requestAccessToken) {
@@ -83,7 +82,7 @@ public interface JbstMongoUsersSessionsRepository extends MongoRepository<JbstMo
     default List<JbstUserSession> findByUsernameInAsAny(Set<Username> usernames) {
         return this.findByUsernameIn(usernames).stream()
                 .map(JbstMongoUserSession::userSession)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     default void enableMetadataRenewCron() {
