@@ -18,7 +18,6 @@ import org.springframework.test.context.support.AnnotationConfigContextLoader;
 import java.lang.reflect.Method;
 import java.math.BigDecimal;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static jbst.foundation.domain.constants.JbstConstants.Numbers.BigDecimals.HUNDRED;
@@ -48,7 +47,7 @@ class JbstConfigurationAsyncTest {
         // Act
         var methods = Stream.of(this.componentUnderTest.getClass().getMethods())
                 .map(Method::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         // Assert
         assertThat(methods)
